--- a/horas.html
+++ b/horas.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./estilos/estilos.css" />
 </head>
 
@@ -34,9 +35,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Mis horas</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="cancelar.html">Cancelar hora</a>
                             </li>
                             <li class="nav-item">
                                 <button class="btn boton" onclick="window.location='doctor.html';">Portal
@@ -66,6 +64,10 @@
                         <div class="col-12">
                             <p class="h5 py-1">Ingresa tu rut para buscar tus horas agendadas</p>
                         </div>
+                        <div class="alert alert-info" role="alert">
+                            Si quieres cancelar una hora haz click en la cruz roja que se encuentra un lado de la hora
+                            agendada.
+                        </div>
                         <div class="col-12">
                             <input type="text" class="form-control" placeholder="RUT" aria-label="RUT" id="run">
                         </div>
@@ -77,6 +79,24 @@
 
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Cancelar hora medica</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        ¿ Estas seguro que deseas cancelar tu hora ?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="cancelarHora">Cancelar hora</button>
                     </div>
                 </div>
             </div>
