--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
                                 <a class="nav-link" href="horas.html">Mis horas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="cancelar.html">Cancelar hora</a>
-                            </li>
-                            <li class="nav-item">
-                                <button class="btn boton" onclick="window.location='doctor.html';">Portal medico</button>
+                                <button class="btn boton" onclick="window.location='doctor.html';">Portal
+                                    medico</button>
                             </li>
                         </ul>
                     </div>
@@ -47,7 +45,7 @@
             </nav>
         </header>
         <div id="pasos">
-            
+
         </div>
     </main>
     <footer>
@@ -56,6 +54,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/main.js" type="module"></script>
 </body>
 
