--- a/doctor.html
+++ b/doctor.html
@@ -35,7 +35,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="horas.html">Mis horas</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item ">
                                 <button class="btn boton" onclick="window.location='doctor.html';">Portal
                                     medico</button>
                             </li>
@@ -44,7 +44,45 @@
                 </div>
             </nav>
         </header>
-        
+        <div class="container">
+            <div class="row p-2 p-md-5 g-2 g-md-5 justify-content-center">
+                <div class="col-12 col-md-6 p-2">
+                    <div class="row g-5">
+                        <div class="col-12">
+                            <p class="display-6 titulo">Portal medicos</p>
+                            <p class="h5 parrafo">Revisa las horas tomadas a tu nombre</p>
+                        </div>
+                        <div class="col-12">
+                            <img alt="horas" src="./imagenes/medico.svg" width="100%"
+                                style="filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 p-md-5 p-4 horas">
+                    <div class="row g-2">
+                        <div class="col-12">
+                            <p class="h5 py-1">Ingresa tu apellido para buscar tus horas agendadas</p>
+                        </div>
+                        <div class="alert alert-info" role="alert">
+                            Si quieres cancelar una hora haz click en la cruz roja que se encuentra un lado de la hora
+                            agendada.
+                        </div>
+                        <div class="col-12">
+                            <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellidos"
+                                id="apellido">
+                        </div>
+                        <div class="col-12 col-md-3 offset-md-9">
+                            <button class="btn boton w-100" id="buscar">Buscar</button>
+                        </div>
+                        <div class="col-12">
+                            <div class="cajaHorasMedica" id="horas">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <p>Created with ♥️ by <a href="https://github.com/aenema25" target="_blank"> Oscar Uribe</a></p>
@@ -52,6 +90,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="./js/medicos.js"></script>
 </body>
 
 </html>
